--- a/0x00-semantic_html/0-index.html
+++ b/0x00-semantic_html/0-index.html
@@ -6,16 +6,16 @@
 <body>
     <header>
         <nav>
-            <a href="#home">Home</a>
-            <a href="#about">About</a>
-            <a href="#contact">Contact</a>
+            <a href="#"></a>
+            <a href="#"></a>
+            <a href="#"></a>
         </nav>
     </header>
     <main>
         <article>
-            <h1>Semantic HTML</h1>
+            <h1></h1>
             <section>
-                <p>Content</p>
+    
             </section>
         </article>
     </main>
